--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "babel-eslint": "^10.1.0",
     "cordova-android": "^10.1.1",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-file": "^6.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -59,7 +61,9 @@
       "android"
     ],
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {},
+      "cordova-plugin-file": {}
     }
   }
 }
